Text Alignment Fix

--- a/styles/AboutSection.module.css
+++ b/styles/AboutSection.module.css
@@ -92,6 +92,7 @@
     width: 90%;
     background-color: var(--accent4);
     padding: 1rem;
+    padding-bottom: .5rem;
 }
 
 .btnContainer {
