--- a/styles/aboutPage.module.css
+++ b/styles/aboutPage.module.css
@@ -18,7 +18,6 @@
 
 .topContent h5 {
     width: 80%;
-    text-align: justify;
     hyphens: auto;
     color: var(--accent1);
     font-weight: 400;
@@ -70,7 +69,6 @@
 }
 
 .subHeadingDescription {
-    text-align: justify;
     hyphens: auto;
     color: var(--accent1);
     font-weight: 400;
@@ -100,7 +98,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
 }
 
 .subHeading2 {
@@ -110,7 +107,6 @@
 }
 
 .subP {
-    text-align: justify;
     hyphens: auto;
     color: var(--accent1);
     font-weight: 400;
@@ -142,7 +138,6 @@
 }
 
 .profile {
-    text-align: justify;
     hyphens: auto;
     color: var(--accent1);
     width: 95%;
@@ -163,7 +158,7 @@
     }
 
     .topContent h5 {
-        text-align: justify;
+        text-align: center;
         width: 100%;
     }
 
@@ -175,6 +170,10 @@
         text-align: center;
     }
 
+    .subHeadingDescription {
+        text-align: center;
+    }
+
     .imageBox {
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 2rem;
@@ -183,6 +182,11 @@
 
     .subP {
         width: 100%;
+        text-align: center;
+    }
+
+    .profile {
+        text-align: center;
     }
 }
 
